# nx-remote-cache

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_test.yml  release.yml
npm/: index.js  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
npm/src/: cli.ts
npm/src/cmds/: nx.types.ts  start.spec.ts  start.ts  statistics.ts  stop.spec.ts  stop.ts
scripts/: build-all.sh  start-local-redis.sh
src/: api.rs  lib.rs  logger.rs  main.rs  remote_cache.rs  remote_cache_redis.rs  utils.rs
tests/: cache_get_tests.rs  cache_put_tests.rs  test_utils.rs
