[package]
name = "nx-remote-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
axum = "0.8.3"
hyper = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
tower-http = { version = "0.5", features = ["auth"] }
async-trait = "0.1"
hyper-util = "0.1.11"
anyhow = "=1.0.64"

[dev-dependencies]
mockall = "0.12"
once_cell = "1"

[[bin]]
name = "nx-cache-server"
path = "src/main.rs"